--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -27,6 +27,10 @@
 				<%= f.label :email_accounting_2, 'Accounting Email 2' %>
 				<%= f.text_field :email_accounting_2, class: 'form-control' %>
 			</div>
+			<div class="form-group">
+				<%= f.label :preferred_paymenttype, 'Preferred Payment Type' %>
+				<%= select(:client, 'preferred_paymenttype', payment_types, { :include_blank => 'None' }, { :class => 'form-control' }) %>
+			</div>
 		</div>
 		<div class="col-sm-4">
 			<div class="form-group">
