--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -9,7 +9,7 @@
 				<h2>Recent &amp; Unpaid Invoices</h2>
 				<div class="row">
 					<div class="col-sm-12">
-						<% if @invoices.blank? %>
+						<% if @notableInvoices.blank? %>
 						<p class="lead">No invoices.</p>
 						<% else %>
 						<table class="table table-condensed">
