--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1,3 +1,5 @@
+@import "bootstrap";
+@import "font-awesome";
 @import "partials/mixins";
 @import "partials/sizing";
 @import "partials/typography";
