--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -31,6 +31,10 @@
 				<%= f.label :preferred_paymenttype, 'Preferred Payment Type' %>
 				<%= select(:client, 'preferred_paymenttype', payment_types, { :include_blank => 'None' }, { :class => 'form-control' }) %>
 			</div>
+			<div class="form-group">
+				<%= f.label :currentrate, 'Current Hourly Rate' %>
+				<%= f.number_field :currentrate, class: 'form-control' %>
+			</div>
 		</div>
 		<div class="col-sm-4">
 			<div class="form-group">
