--- a/app/views/lines/_form.html.erb
+++ b/app/views/lines/_form.html.erb
@@ -17,7 +17,7 @@
   	<div class="form-group">
   		<div class="input-group">
 				<span class="input-group-addon"><i class="fa fa-usd"></i></span>
-				<%= f.text_field :rate, :placeholder => 'Rate', class: 'form-control text-center' %>
+				<%= f.text_field :rate, :placeholder => @ratePlaceholder, class: 'form-control text-center' %>
 			</div>
   	</div>
   </div>
