--- a/app/views/layouts/_financialdash.html.erb
+++ b/app/views/layouts/_financialdash.html.erb
@@ -71,7 +71,6 @@ jQuery(document).ready(function($) {
     ]
 	};
 	var ctx = document.getElementById('monthlyRevenueChart').getContext('2d');
-	var monthlyRevenueChart = new Chart(ctx).StackedBar(data, {
-	});
+	var monthlyRevenueChart = new Chart(ctx).StackedBar(data, {});
 });
 </script>
