--- a/app/views/lines/_line.html.erb
+++ b/app/views/lines/_line.html.erb
@@ -1,7 +1,7 @@
 <tr>
 	<td><%= link_to [line.invoice, line], method: :delete, data: { confirm: 'Are you sure?' } do %><i class="fa fa-trash-o red"></i><% end %></td>
   <td><%= line.description %></td>
-  <% if !line.hours.blank? %>
+  <% if line.hours.present? %>
   <td class="text-center"><%= line.hours %></td>
   <td class="text-center"><%= number_to_currency(line.rate, { :unit => ''}) %></td>
   <% else %>
