--- a/app/views/years/show.html.erb
+++ b/app/views/years/show.html.erb
@@ -44,7 +44,7 @@
 		</div>
 		<div class="row">
 			<div class="col-sm-8 col-sm-offset-2">
-				<canvas id="monthlyRevenueChart" class="chart"></canvas>
+				<%= high_chart('incomeChart', @incomeChart) %>
 			</div>
 		</div>
 		<div class="row">
@@ -132,21 +132,3 @@
 		</div>
 	</div>
 </section>
-
-<script type="text/javascript">
-jQuery(document).ready(function($) {
-	var data = {
-		labels: ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'],
-		datasets: [
-			{
-				fillColor: 'rgba(92,184,92,0.5)',
-				strokeColor: 'rgba(92,184,92,0.5)',
-				pointColor: 'rgba(92,184,92,0.8)',
-				data: [<% (1..12).each do |month| %><%= Invoice.paidByMonth(Date.new(@year.year, month, 1)).sum('cost') %>,<% end %>]
-			}
-		]
-	};
-	var ctx = document.getElementById('monthlyRevenueChart').getContext('2d');
-	var monthlyRevenueChart = new Chart(ctx).Bar(data, {});
-});
-</script>
