--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -35,6 +35,10 @@
 				<%= f.label :currentrate, 'Current Hourly Rate' %>
 				<%= f.number_field :currentrate, class: 'form-control' %>
 			</div>
+			<div class="form-group">
+				<%= check_box(:client, :active, {}, 'true', 'false') %>
+				<%= f.label :active, 'Active?' %>
+			</div>
 		</div>
 		<div class="col-sm-4">
 			<div class="form-group">
