--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -28,6 +28,10 @@
 				<%= f.text_field :email_accounting_2, class: 'form-control' %>
 			</div>
 			<div class="form-group">
+				<%= f.label :email_accounting_3, 'Accounting Email 3' %>
+				<%= f.text_field :email_accounting_3, class: 'form-control' %>
+			</div>
+			<div class="form-group">
 				<%= f.label :preferred_paymenttype, 'Preferred Payment Type' %>
 				<%= select(:client, 'preferred_paymenttype', payment_types, { :include_blank => 'None' }, { :class => 'form-control' }) %>
 			</div>
