--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -4,7 +4,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<% if @invoice.client.logo.present? %>
-				<%= image_tag(@invoice.client.logo.url(:medium), class: 'pull-right hidden-xs') %>
+				<%= image_tag(@invoice.client.logo.url(), class: 'client-logo pull-right hidden-xs') %>
 				<% end %>
 				<h1>Invoice #<%= @invoice.id %></h1>
 				<p class="doicons">
