--- a/app/views/invoice_mailer/invoice_email.html.erb
+++ b/app/views/invoice_mailer/invoice_email.html.erb
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>Invoice for <%= @client.name %></h1>
+    <h3>Invoice ID: <%= @invoice.display_id %></h3>
     <h3>Amount: <%= number_to_currency(@invoice.lines.sum('total'), { :unit => '$', :negative_format => '(%n)' }) %></h3>
     <h3>Status: <% if @invoice.paid == true %><span style="color: green;">PAID</span><% else %><span style="color: red;">NOT PAID</span><% end %></h3>
     <% if @invoice.paid == true %><h3>Payment Method: <%= @invoice.paymenttype %></h3><% end %>
