--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,16 +5,44 @@
 			<div class="col-sm-12">
 				<div class="row">
 					<div class="col-md-3 col-sm-6">
-						<%= link_to clients_path, { :class => 'btn btn-block btn-lg btn-warning' } do %><i class="fa fa-users left"></i>Clients<% end %>
+            <div class="row">
+              <div class="col-xs-10">
+                <%= link_to clients_path, { :class => 'btn btn-block btn-lg btn-warning' } do %><i class="fa fa-users left"></i>Clients<% end %>
+              </div>
+              <div class="col-xs-2 button-wrap-nopad">
+                <%= link_to new_client_path, { :class => 'btn btn-block btn-lg btn-warning' } do %><i class="fa fa-fw fa-plus"></i><% end %>
+              </div>
+            </div>
 					</div>
 					<div class="col-md-3 col-sm-6">
-						<%= link_to projects_path, { :class => 'btn btn-block btn-lg btn-info' } do %><i class="fa fa-folder-open-o left"></i>Projects<% end %>
+						<div class="row">
+              <div class="col-xs-10">
+								<%= link_to projects_path, { :class => 'btn btn-block btn-lg btn-info' } do %><i class="fa fa-folder-open-o left"></i>Projects<% end %>
+							</div>
+							<div class="col-xs-2 button-wrap-nopad">
+                <%= link_to new_project_path, { :class => 'btn btn-block btn-lg btn-info' } do %><i class="fa fa-fw fa-plus"></i><% end %>
+              </div>
+						</div>
 					</div>
 					<div class="col-md-3 col-sm-6">
-						<%= link_to invoices_path, { :class => 'btn btn-block btn-lg btn-success' } do %><i class="fa fa-usd left"></i>Invoices<% end %>
+						<div class="row">
+              <div class="col-xs-10">
+								<%= link_to invoices_path, { :class => 'btn btn-block btn-lg btn-success' } do %><i class="fa fa-usd left"></i>Invoices<% end %>
+							</div>
+							<div class="col-xs-2 button-wrap-nopad">
+                <%= link_to new_invoice_path, { :class => 'btn btn-block btn-lg btn-success' } do %><i class="fa fa-fw fa-plus"></i><% end %>
+              </div>
+						</div>
 					</div>
 					<div class="col-md-3 col-sm-6">
-						<%= link_to goals_path, { :class => 'btn btn-block btn-lg btn-danger' } do %><i class="fa fa-tasks left"></i>Goals<% end %>
+						<div class="row">
+              <div class="col-xs-10">
+								<%= link_to goals_path, { :class => 'btn btn-block btn-lg btn-danger' } do %><i class="fa fa-tasks left"></i>Goals<% end %>
+							</div>
+							<div class="col-xs-2 button-wrap-nopad">
+                <%= link_to new_goal_path, { :class => 'btn btn-block btn-lg btn-danger' } do %><i class="fa fa-fw fa-plus"></i><% end %>
+              </div>
+						</div>
 					</div>
 				</div>
 			</div>
