--- a/app/views/layouts/pdf/invoice.html.erb
+++ b/app/views/layouts/pdf/invoice.html.erb
@@ -55,7 +55,7 @@
 			<div class="col-sm-12 text-center">
 				<hr>
 				<p>&copy; <%= company_full_name %></p>
-				<%= wicked_pdf_image_tag company_logo_url %>
+				<%= wicked_pdf_image_tag '/images/sdc_acronym.svg' %>
 			</div>
 		</div>
 	</div>
