--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,7 +8,7 @@
 					</ul>
 				</nav><% end %>
 				<p>&copy; <%= company_full_name %></p>
-				<a href="<%= company_site_url %>" title="<%= company_full_name %>" class="hidden-print"><img id="footer-logo" src="<%= company_logo_alt_url %>" alt="<%= company_full_name %>"></a>
+				<a href="<%= company_site_url %>" title="<%= company_full_name %>" class="hidden-print"><img id="footer-logo" src="<%= company_acronym_logo_alt_url %>" alt="<%= company_full_name %>"></a>
 			</div>
 		</div>
 	</div>
