--- a/app/views/layouts/pdf/invoice.html.erb
+++ b/app/views/layouts/pdf/invoice.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title><%= company_abbrv_name %> Biz Admin</title>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <%= wicked_pdf_stylesheet_link_tag "application", media: "all" %>
   <%= wicked_pdf_stylesheet_link_tag "font-awesome.min" %>
   <%= wicked_pdf_stylesheet_link_tag "bootstrap.min" %>
