--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -3,8 +3,13 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12">
-				<h1>Goals</h1>
+				<h1><% if params[:showall] == 'true' %>All<% else %>Recent<% end %> Goals</h1>
 				<p><%= link_to 'Home', root_path %></p>
+				<% if params[:showall] == 'true' %>
+				<p><%= link_to 'Recent Goals', goals_path %></p>
+				<% else %>
+				<p><%= link_to 'All Goals', goals_path(:showall => 'true') %></p>
+				<% end %>
 				<p><%= link_to new_goal_path, { :class => 'btn btn-success' } do %><i class="fa fa-plus left"></i>New Goal<% end %></p>
 				<% if @goals.blank? %>
 				<p class="lead">No goals.</p>
