Fixed mail header image?

--- a/app/views/layouts/mail.html.erb
+++ b/app/views/layouts/mail.html.erb
@@ -192,7 +192,7 @@ ul li {
         <div class="content">
           <table bgcolor="#333333">
             <tr>
-              <td align="center"><img src="<%= company_logo_alt_url %>" alt="<%= company_full_name %>"></td>
+              <td align="center"><img src="<%= root_url[0...-1] %><%= company_logo_alt_png_url %>" alt="<%= company_full_name %>"></td>
             </tr>
           </table>
         </div>
