--- a/app/views/lines/_form.html.erb
+++ b/app/views/lines/_form.html.erb
@@ -1,35 +1,43 @@
 <%= form_for([@invoice, @invoice.lines.build]) do |f| %>
 <div class="row">
-  <div class="col-sm-4">
-  	<div class="form-group">
-	    <%= f.text_field :description, :required => true, :placeholder => 'Description', class: 'form-control' %>
-  	</div>
-  </div>
-  <div class="col-sm-2">
-  	<div class="form-group">
-  		<div class="input-group">
-				<span class="input-group-addon"><i class="fa fa-clock-o"></i></span>
-				<%= f.text_field :hours, :placeholder => 'Hours', class: 'form-control text-center' %>
-			</div>
-  	</div>
-  </div>
-  <div class="col-sm-2">
-  	<div class="form-group">
-  		<div class="input-group">
-				<span class="input-group-addon"><i class="fa fa-usd"></i></span>
-				<%= f.text_field :rate, :placeholder => @ratePlaceholder, class: 'form-control text-center' %>
-			</div>
-  	</div>
-  </div>
-  <div class="col-sm-2">
-    <div class="form-group">
-    	<div class="input-group">
-				<span class="input-group-addon"><i class="fa fa-usd"></i></span>
-				<%= f.text_field :total, :required => true, :placeholder => 'Total', class: 'form-control text-center' %>
-			</div>
+  <div class="col-md-10">
+    <div class="row">
+      <div class="col-md-6">
+      	<div class="form-group">
+    	    <%= f.text_field :description, :required => true, :placeholder => 'Description', class: 'form-control' %>
+      	</div>
+      </div>
+      <div class="col-md-2">
+      	<div class="form-group">
+      		<div class="input-group">
+    				<span class="input-group-addon"><i class="fa fa-clock-o"></i></span>
+    				<%= f.text_field :hours, :placeholder => 'Hours', class: 'form-control text-center' %>
+    			</div>
+      	</div>
+      </div>
+      <div class="col-md-2">
+      	<div class="form-group">
+      		<div class="input-group">
+    				<span class="input-group-addon"><i class="fa fa-usd"></i></span>
+    				<%= f.text_field :rate, :placeholder => @ratePlaceholder, class: 'form-control text-center' %>
+    			</div>
+      	</div>
+      </div>
+      <div class="col-md-2">
+        <div class="form-group">
+        	<div class="input-group">
+    				<span class="input-group-addon"><i class="fa fa-usd"></i></span>
+    				<%= f.text_field :total, :required => true, :placeholder => 'Total', class: 'form-control text-center' %>
+    			</div>
+        </div>
+      </div>
+      <div class="col-md-6 col-md-offset-6">
+        <%= check_box(:line, :discount, {}, 'true', 'false') %>
+				<%= f.label :discount, 'Discount?' %>
+      </div>
     </div>
   </div>
-  <div class="col-sm-2">
+  <div class="col-md-2">
   	<div class="form-group">
     	<button type="submit" class="btn btn-success btn-block"><i class="fa fa-save left"></i>Create</button>
   	</div>
