Sassed up stylesheets

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1,128 +1,3 @@
 @import "bootstrap";
-@import "partials/mixins";
-@import "partials/sizing";
-@import "partials/typography";
-@import "partials/colors";
-@import "partials/bootstrap-mods";
-
-body {
-	color: $white;
-	background: $grey;
-}
-
-.pad {
-	padding: 2em 0px;
-}
-
-.nopad-side {
-	padding-left: 0px;
-	padding-right: 0px;
-}
-
-header, footer {
-	@extend .pad;
-}
-
-h1 {
-	margin-top: 0px;
-}
-
-img {
-	max-width: 100%;
-}
-
-ul {
-	list-style-type: none;
-	margin: 0px;
-	padding: 0px;
-}
-
-.green { color: $green; }
-.red   { color: $red; }
-
-.spread {
-	font-size: 12px;
-	letter-spacing: 1px;
-	font-weight: bold;
-	text-transform: uppercase;
-}
-
-.currency {
-	letter-spacing: 1px;
-}
-
-p.lead.halfbottom {
-	margin-bottom: 10px;
-}
-
-hr.halfbottom {
-	margin: 10px 0px;
-}
-
-section {
-	color: #000000;
-	background: $white;
-	padding: 1em 0px;
-}
-
-.client-logo,
-.client-logo img {
-	max-width: 300px;
-}
-
-footer {
-
-	#footer-logo {
-		max-width: 100px;
-	}
-
-	#footer-nav {
-
-		margin-bottom: 1em;
-
-		a {
-			color: $white;
-		}
-
-		ul {
-
-			li {
-
-				display: inline;
-			}
-
-			li:not(:last-child):after {
-				content: '\2022';
-				margin: 0px 0.5em;
-			}
-
-		}
-
-	}
-
-}
-
-#client-edit .clientimage {
-	margin-top: 15px;
-}
-
-.chart {
-	width: 100%;
-	height: 300px;
-	margin-top: 20px;
-}
-
-.doicons i {
-	vertical-align: middle;
-}
-
-.button-wrap-nopad {
-
-	padding-left: 0px;
-
-	.btn-block {
-		padding-left: 0px;
-		padding-right: 0px;
-	}
-	
-}
+@import "partials/variables";
+@import "partials/global";
