--- a/app/assets/stylesheets/partials/_global.scss
+++ b/app/assets/stylesheets/partials/_global.scss
@@ -153,20 +153,7 @@ footer {
 
 		a {
 			color: $white;
-		}
-
-		ul {
-
-			li {
-
-				display: inline;
-			}
-
-			li:not(:last-child):after {
-				content: '\2022';
-				margin: 0px 0.5em;
-			}
-
+			font-size: 24px;
 		}
 
 	}
@@ -177,9 +164,7 @@ footer {
 	margin-top: 15px;
 }
 
-.chart {
-	width: 100%;
-	height: 300px;
+.chart-wrap {
 	margin-top: 20px;
 }
 
@@ -194,6 +179,35 @@ footer {
 	.btn-block {
 		padding-left: 0px;
 		padding-right: 0px;
+	}
+
+}
+
+@media all and (min-width: 768px) {
+
+	footer {
+
+		.footer-nav {
+
+			a {
+				font-size: 14px;
+			}
+
+			ul {
+
+				li {
+					display: inline;
+				}
+
+				li:not(:last-child):after {
+					content: '\2022';
+					margin: 0px 0.5em;
+				}
+
+			}
+
+		}
+
 	}
 
 }
