--- a/app/views/years/show.html.erb
+++ b/app/views/years/show.html.erb
@@ -45,7 +45,7 @@
 		</div>
 		<div class="row">
 			<div class="col-sm-8 col-sm-offset-2">
-				<%= high_chart('incomeChart', @incomeChart) %>
+				<div class="chart-wrap"><%= column_chart chart_year_by_month_path(@year.id) %></div>
 			</div>
 		</div>
 		<div class="row">
