Added "paid today" auto fill button

--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -81,7 +81,7 @@
 			<div class="form-group">
 				<%= f.label :paiddate, 'Paid Date' %>
 				<div class="input-group">
-					<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+					<span class="input-group-addon"><i id="paid-date-icon" class="fa fa-calendar"></i></span>
 					<%= f.text_field :paiddate, :placeholder => 'YYYY-MM-DD', class: 'form-control datepicker' %>
 				</div>
 			</div>
