--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -39,7 +39,7 @@
 		<div class="row">
 			<div class="col-sm-6">
 				<h3>Invoices</h3>
-				<% if @invoices.blank? %>
+				<% if @project.invoices.blank? %>
 				<p class="lead">No invoices.</p>
 				<% else %>
 				<table class="table table-condensed">
@@ -51,7 +51,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<% @invoices.each do |invoice| %>
+						<% @project.invoices.each do |invoice| %>
 						<tr id="invoicerow<%= invoice.id %>">
 							<td><%= link_to invoice do %><%= invoice.date %><% end %></td>
 							<td class="text-right"><% if invoice.cost %><%= number_to_currency(invoice.cost, { :negative_format => '(%n)' }) %><% else %>&mdash;<% end %></td>
